# hunter-searcher

./: .env_EXAMPLE  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-238f04348b3b26d45b9aee96596a1cc7bfdc27af360a08f74d4ba2c2500efa62.json  query-2b0abb1a1f77e953c89637a421eddcd09db358031e9353921e972791c77fb737.json  query-6f5356ecdf9f2913e686955b7ba1117124d28731ce6894b23d712a43c621c520.json  query-738b2cb71c06cf9211dbb0b4e70e608c68839caea81c03431e6d970691b6f8e3.json  query-8aa4a01431173e8290a1047e811ef59d37ee81465b51edf34dbfcce4624abad2.json  query-8fcdf4b02e4290a313e6079bc4819bfa5050406925b0871ae71c4a595206a512.json  query-b46e74c49505f3097990b2b9b66109d17eb8543a38cdc0416bf83f94d239938d.json  query-e8bd3ce3b31442d6e9d4abfbad8a93da8490fef442b313fb17a9e9647b01e61b.json  query-f23832462c989414c2e004fc31d4e9e2a6dc801295bb7ebf270dddfa65e5aad4.json
postgresql/: Dockerfile  initdb.sql
src/: app.rs  crawler.rs  db.rs  index.rs  lexer.rs  main.rs
src/html/: about.html  footer.html  index.html  main.html  style.css
